feat: rework endpoints & add generate endpoint
