# docs/swagger.json
@@ -44,7 +44,39 @@
                 }
             }
         },
-        "/v1/synchronize": {
+        "/v1/map/{map_name}/generate": {
+            "get": {
+                "description": "Generate json file from map file.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Map"
+                ],
+                "summary": "Generate json file from map file.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Map name",
+                        "name": "map_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/v1/map/{map_name}/synchronize": {
             "post": {
                 "description": "Synchronize GCS file to an HAProxy map file.",
                 "consumes": [
@@ -54,7 +86,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Synchronization"
+                    "Map"
                 ],
                 "summary": "Synchronize GCS file to an HAProxy map file.",
                 "parameters": [
@@ -66,6 +98,13 @@
                         "schema": {
                             "$ref": "#/definitions/handlers.SynchronizeRequestBody"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Map name",
+                        "name": "map_name",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -84,17 +123,13 @@
             "type": "object",
             "required": [
                 "bucket_file_name",
-                "bucket_name",
-                "map_name"
+                "bucket_name"
             ],
             "properties": {
                 "bucket_file_name": {
                     "type": "string"
                 },
                 "bucket_name": {
-                    "type": "string"
-                },
-                "map_name": {
                     "type": "string"
                 }
             }
